@@ -2372,6 +2372,11 @@ core::dimension2du CBurningVideoDriver::getMaxTextureSize() const
 	return core::dimension2du(SOFTWARE_DRIVER_2_TEXTURE_MAXSIZE, SOFTWARE_DRIVER_2_TEXTURE_MAXSIZE);
 }
 
+bool CBurningVideoDriver::queryTextureFormat(ECOLOR_FORMAT format) const
+{
+	return format == BURNINGSHADER_COLOR_FORMAT;
+}
+
 
 } // end namespace video
 } // end namespace irr
